<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DuplicateWaterProviderActivity">

    <ImageView
        android:id="@+id/registeredWaterProviderImage"
        android:layout_width="179dp"
        android:layout_height="516dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/newWaterProviderImage"
        android:layout_width="182dp"
        android:layout_height="510dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="208dp"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/questionTextView"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="92dp"
        android:text="@string/is_this_the_same_water_vending_machine"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="25dp"
        android:textColor="@color/blueMap"
        />

    <Button
        android:id="@+id/yesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="63dp"
        android:layout_marginBottom="21dp"
        android:text="@string/yes"
        android:onClick="yesButtonPressed"
        android:background="@color/blueMap"
        android:textColor="#ffffff"
        />

    <Button
        android:id="@+id/noButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="23dp"
        android:text="@string/no_add_it"
        android:onClick="noButtonPressed"
        android:background="@color/blueMap"
        android:textColor="#ffffff"
        />
</RelativeLayout>